test/spec_vectors/elem/ok/module_47.wat
(module (table 0 funcref) (elem (i32.const 1)))