test/spec_vectors/elem/fail/module_70.wat
(module (table 1 funcref) (elem (global.get 0)))